# ghc-cpp-play

./: CHANGELOG.md  ghc-cpp-play.cabal
app/: Lexer.hs  Main.hs  Parser.hs  PreProcess.hs
