cabal-version:      3.0
name:               ghc-cpp-play

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: experimenting with in-tree GHC CPP

-- A longer description of the package.
-- description:

license:            Apache-2.0
license-file:       LICENSE
author:             Alan Zimmerman
maintainer:         alan.zimm@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ghc-cpp-play
    -- Import common warning flags.
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lexer
                    , Parser
                    , PreProcess

    build-depends:    base ^>=4.17.2.0
                    , containers
                    , parsec
                    , unordered-containers
    hs-source-dirs:   app
    default-language: GHC2021
